--- a/dns_playbook.yml
+++ b/dns_playbook.yml
@@ -1,7 +1,6 @@
 ---
 - name: Install and configure BIND DNS server
-  hosts: localhost
-  connection: local-connection
+  hosts: all
   become: yes
   tasks:
     - name: Install bind and bind-utils package
@@ -45,25 +44,25 @@
     - name: add name server ip /etc/resolv.conf
       lineinfile:
         path: /etc/resolv.conf
+        regexp: '^nameserver'
         line: "nameserver 192.168.124.200"
 
     - name: Allow DNS service in firewalld
       firewalld:
         service: dns
         zone: public
-        permanent: yes
+        permanent: true
         state: enabled
 
     - name: Reload firewalld to apply changes
-      firewalld:
-       state: reloaded
-
-
-
+      service:
+        name: firewalld
+        state: reloaded
+       
   handlers:
-    name: restart named service
-    service:
-      name: named
-      state: restared
+    - name: restart named service
+      service:
+        name: named
+        state: restared
         
 
