--- a/dns_client.yml
+++ b/dns_client.yml
@@ -2,6 +2,9 @@
 - name: Configure DNS client
   hosts: dns_client
   become: yes
+  vars:
+    ntp_servers:
+      - 192.168.124.200
     
   tasks:
     - name: Backup the current resolv.conf
@@ -18,4 +21,36 @@
         group: root
         mode: '0644'
 
+    - name: Ensure NTP package is installed (for Debian/Ubuntu)
+      apt:
+        name: ntp
+        state: present
+      when: ansible_facts['os_family'] == 'Debian'
 
+    - name: Ensure NTP package is installed (for RHEL/CentOS)
+      yum:
+        name: ntp
+        state: present
+      when: ansible_facts['os_family'] == 'RedHat'
+
+    - name: Configure /etc/ntp.conf
+      template:
+        src: ntp.conf.j2
+        dest: /etc/ntp.conf
+        owner: root
+        group: root
+        mode: '0644'
+
+    - name: Ensure NTP service is enabled and started (for Debian/Ubuntu)
+      service:
+        name: ntp
+        state: started
+        enabled: yes
+      when: ansible_facts['os_family'] == 'Debian'
+
+    - name: Ensure NTP service is enabled and started (for RHEL/CentOS)
+      service:
+        name: ntpd
+        state: started
+        enabled: yes
+      when: ansible_facts['os_family'] == 'RedHat'
