--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -48,7 +48,7 @@
 
     - name: Copy tftpboot file to /rhel-9.2
       copy:
-        src: /mnt/AppStream/Packages/syslinux-tftpboot-version-architecture.rpm
+        src: /mnt/AppStream/Packages/syslinux-tftpboot-6.04-0.20.el9.noarch.rpm
         dest: /rhel-9.2/
         owner: root
         group: root
