--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -72,13 +72,13 @@
         opts: loop,ro
         state: mounted
 
-    - name: Copy /mnt/rhel-9.2 to /var/www/html/
-      copy:
-        src: /mnt/rhel-9.2/
-        dest: /var/www/html/rhel-9.2/
-        owner: root
-        group: root
-        mode: "0644"
+        #    - name: Copy /mnt/rhel-9.2 to /var/www/html/
+        #      copy:
+        #        src: /mnt/rhel-9.2/
+        #        dest: /var/www/html/rhel-9.2/
+        #        owner: root
+        #        group: root
+        #        mode: "0644"
     
     - name: Unmount /mnt
       ansible.posix.mount:
