--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -74,8 +74,8 @@
 
         #    - name: Copy /mnt/rhel-9.2 to /var/www/html/
         #      copy:
-        #        src: /mnt/rhel-9.2/
-        #        dest: /var/www/html/rhel-9.2/
+        #        src: /mnt/rhel-9.2
+        #        dest: /var/www/html/
         #        owner: root
         #        group: root
         #        mode: "0644"
@@ -93,9 +93,14 @@
     - name: Extract rpm package
       command: sh -c "rpm2cpio /rhel-9.2/syslinux-tftpboot-6.04-0.20.el9.noarch.rpm | cpio -idmv -D /rhel-9.2/"
     
-    - name: Copy /rhel-9.2/tftpboot/{images,pxelinux.cfg,pxelinux.vesamenu.c32}
+    - name: Create /var/lib/tftpboot/pxelinux.cfg/images
+      file:
+        path: /var/lib/tftpboot/pxelinux.cfg/images
+        state: directory
+
+    - name: Copy /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/{vmlinuz,initrd.img}
       copy:
-        src: /rhel-9.2/tftpboot/{images,pxelinux.cfg,pxelinux.vesamenu.c32}
+        src: /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/{vmlinuz,initrd.img} /var/lib/tftpboot/pxelinux.cfg/images
         dest: /var/lib/tftpboot/
 
     - name: Copy default.j2 to /var/lib/tftpboot/pxelinux.cfg/
