--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -100,9 +100,9 @@
 
     - name: Copy /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/{vmlinuz,initrd.img}
       copy:
-        src: /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/{vmlinuz,initrd.img} /var/lib/tftpboot/pxelinux.cfg/images
-        dest: /var/lib/tftpboot/
-        remote_src: yes
+        src: /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/{vmlinuz,initrd.img}
+        dest: /var/lib/tftpboot/pxelinux.cfg/images
+        
 
     - name: Copy default.j2 to /var/lib/tftpboot/pxelinux.cfg/
       template:
