--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -102,7 +102,9 @@
       copy:
         src: /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/{vmlinuz,initrd.img}
         dest: /var/lib/tftpboot/pxelinux.cfg/images
-        remote_src: yes 
+        owner: root
+        group: root
+        mode: "0644"  
 
     - name: Copy default.j2 to /var/lib/tftpboot/pxelinux.cfg/
       template:
