--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -98,9 +98,17 @@
         path: /var/lib/tftpboot/pxelinux.cfg/images
         state: directory
 
-    - name: Copy /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/{vmlinuz,initrd.img}
+    - name: Copy /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/vmlinuz
       copy:
         src: /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/vmlinuz
+        dest: /var/lib/tftpboot/pxelinux.cfg/images
+        owner: root
+        group: root
+        mode: "0644" 
+
+    - name: Copy /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/initrd.img
+      copy:
+        src: /var/www/html/rhel-9.2/rhel-9.2/images/pxeboot/initrd.img
         dest: /var/lib/tftpboot/pxelinux.cfg/images
         owner: root
         group: root
@@ -127,7 +135,7 @@
     
     - name: Open firewall for DHCP and TFTP
       firewalld:
-        service: "{{ firewalldsvc }}"
+        service: "{{ firewallsvc }}"
         permanent: yes
         state: enabled
       notify: reload firewalld
@@ -135,4 +143,3 @@
   handlers:
     - name: reload firewalld
       command: firewall-cmd --reload
-
