add zone in firewalld

--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -138,6 +138,7 @@
         service: "{{ firewallsvc }}"
         permanent: yes
         state: enabled
+        zone: public
       notify: reload firewalld
 
   handlers:
