--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -99,25 +99,25 @@
       copy:
         src: /var/www/html/rhel-9.2/images/pxeboot/vmlinuz
         dest: /var/lib/tftpboot/images
-        owner: root
-        group: root
-        mode: "0644" 
+        # owner: root
+        # group: root
+        # mode: "0644" 
 
     - name: Copy /var/www/html/rhel-9.2/images/pxeboot/initrd.img
       copy:
         src: /var/www/html/rhel-9.2/images/pxeboot/initrd.img
         dest: /var/lib/tftpboot/images
-        owner: root
-        group: root
-        mode: "0644"  
+        # owner: root
+        # group: root
+        # mode: "0644"  
 
     - name: Copy /rhel-9.2/tftpboot/* to /var/lib/tftpboot/
       copy:
         src: /rhel-9.2/tftpboot/
         dest: /var/lib/tftpboot/
-        owner: root
-        group: root
-        mode: "0644"
+        # owner: root
+        # group: root
+        # mode: "0644"
 
 
     - name: Create /var/lib/tftpboot/pxelinux.cfg
