--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -93,40 +93,33 @@
         path: /var/lib/tftpboot/images
         state: directory
         setype: tftpdir_rw_t
+        seuser: system_u
+        serole: object_r
       notify: restorecon
 
     - name: Copy /var/www/html/rhel-9.2/images/pxeboot/vmlinuz
       copy:
         src: /var/www/html/rhel-9.2/images/pxeboot/vmlinuz
         dest: /var/lib/tftpboot/images
-        # owner: root
-        # group: root
-        # mode: "0644" 
 
     - name: Copy /var/www/html/rhel-9.2/images/pxeboot/initrd.img
       copy:
         src: /var/www/html/rhel-9.2/images/pxeboot/initrd.img
         dest: /var/lib/tftpboot/images
-        # owner: root
-        # group: root
-        # mode: "0644"  
 
     - name: Copy /rhel-9.2/tftpboot/* to /var/lib/tftpboot/
       copy:
         src: /rhel-9.2/tftpboot/
         dest: /var/lib/tftpboot/
-        # owner: root
-        # group: root
-        # mode: "0644"
-
 
     - name: Create /var/lib/tftpboot/pxelinux.cfg
       file:
         path: /var/lib/tftpboot/pxelinux.cfg
         state: directory
-        owner: root
-        group: root
-        mode: "0644"
+        setype: tftpdir_rw_t
+        seuser: system_u
+        serole: object_r
+      notify: restorecon
 
     - name: Copy default.j2 to /var/lib/tftpboot/pxelinux.cfg/
       template:
