--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -116,7 +116,7 @@
 
     - name: Copy /rhel-9.2/tftpboot/* to /var/lib/tftpboot/
       copy:
-        src: /rhel-9.2/tftpboot/*
+        src: /rhel-9.2/tftpboot/
         dest: /var/lib/tftpboot/
 
     - name: Create /var/lib/tftpboot/pxelinux.cfg
