modify mount opts

--- a/dhcpntftp/dhcpntftpsvr.yml
+++ b/dhcpntftp/dhcpntftpsvr.yml
@@ -28,6 +28,7 @@
         src: /dev/sr0
         path: /mnt
         fstype: iso9660
+        opts: ro
         state: mounted
 
     - name: Create /rhel-9.2 directory to copy tftpboot 
@@ -59,6 +60,7 @@
         src: /dev/sr0
         path: /mnt/rhel-9.2
         fstype: iso9660
+        opts: ro
         state: mounted
 
     - name: Copy /mnt/rhel-9.2 to /var/www/html/
